# historian

./: .gitignore  CHECKLIST.md  MIGRATION.md  README.md  historian.py  install.bash  install_requirements.bash  org_proj.py  pyproject.toml  requirements.txt
historian/: __init__.py  __main__.py  compress.py  historian.py  utils.py
