[project]
name = "historian"
version = "2.0.0"
description = "Organize media files into date-sorted folders and compress videos using H.265"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ollama>=0.4.5",
    "pydantic>=2.10.4",
    "rich>=13.9.4",
    "docopt>=0.6.2",
]

[project.urls]
Homepage = "https://github.com/Desperationis/historian"
Issues = "https://github.com/Desperationis/historian/issues"

[project.scripts]
historian = "historian:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
